--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Flask==0.10.1
+click==7.0
+Flask==1.0.2
 google-api-python-client==1.4.1
 httplib2==0.9.1
-itsdangerous==0.24
-Jinja2==2.7.3
-MarkupSafe==0.23
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.1
 oauth2client==1.4.11
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
@@ -11,4 +12,4 @@ rsa==3.1.4
 simplejson==3.7.3
 six==1.9.0
 uritemplate==0.6
-Werkzeug==0.10.4
+Werkzeug==0.14.1
